# Flexi-2048

./: LICENSE  README.md
command-line-2048/: README.md
command-line-2048/header/: core.h  header1.h  header2.h  header3.h  header4.h  helper.h  moves.h
command-line-2048/src/: basic_functions.cpp  core.cpp  driver.cpp  helper.cpp  helper_functions.cpp  makefile  moves.cpp  operations.cpp
gui-2048/: Doxyfile  README.md
gui-2048/header/: base.h  game.h  gui.h  moves.h  styles.h
gui-2048/src/: CMakeLists.txt  core.cpp  driver.cpp  game.cpp  gui.cpp  helper.cpp  moves.cpp
